<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:background="@color/arkaplan"

    >

    <ImageView
        android:layout_width="129dp"
        android:layout_height="102dp"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/optik_logo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/excel_yukle"
        android:padding="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/buton"
        android:id="@+id/liste_yukle"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cevap_yukle"
        android:padding="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/buton"
        android:enabled="false"
        android:id="@+id/cevap_yukle"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cevap_sec"
        android:padding="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/buton"
        android:enabled="true"
        android:id="@+id/cevap_sec"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optik_tarat"
        android:padding="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/buton"
        android:enabled="true"
        android:id="@+id/optik_tarat"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secili_anahtar"
        android:layout_marginTop="5dp"
        android:textColor="@color/buton"
        android:textAlignment="center"
        android:fontFamily="serif-monospace"
        android:typeface="sans"
        android:textSize="25sp"

        />




</LinearLayout>
